assignment1-initial/target/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'auto'", "'break'", "'boolean'", 
                     "'do'", "'else'", "'float'", "'for'", "'function'", 
                     "'if'", "'integer'", "'return'", "'string'", "'while'", 
                     "'void'", "'out'", "'continue'", "'of'", "'inherit'", 
                     "'array'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "';'", "','", "':'", "'='", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'!'", "'&&'", "'||'", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'::'", "'readInteger'", "'printInteger'", 
                     "'readFloat'", "'writeFloat'", "'readBoolean'", "'printBoolean'", 
                     "'readString'", "'printString'", "'super'", "'preventDefault'" ]

    symbolicNames = [ "<INVALID>", "ARRAYLIT", "AUTO", "BREAK", "BOOLEAN", 
                      "DO", "ELSE", "FLOAT", "FOR", "FUNCTION", "IF", "INTEGER", 
                      "RETURN", "STRING", "WHILE", "VOID", "OUT", "CONTINUE", 
                      "OF", "INHERIT", "ARRAY", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "LBRACKET", "RBRACKET", "SEMI", "COMMA", 
                      "COLON", "ASSIGN", "ADD", "SUB", "MUL", "DIV", "MOD", 
                      "CLAIM", "AND", "OR", "EQ", "NEQ", "LT", "LTE", "GT", 
                      "GTE", "CONCAT", "READINTEGER", "PRINTINTEGER", "READFLOAT", 
                      "WRITEFLOAT", "READBOOLEAN", "PRINTBOOLEAN", "READSTRING", 
                      "PRINTSTRING", "SUPER", "PREVENTDEFAULT", "CSTYLE", 
                      "LINECOMMENT", "BOOLEANLIT", "IDENTIFIER", "INTLIT", 
                      "FLOATLIT", "STRINGLIT", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_declarationList = 1
    RULE_declaration = 2
    RULE_varDeclaration = 3
    RULE_noAssignVarDeclaration = 4
    RULE_assignVarDeclaration = 5
    RULE_recursiveAssignVarDeclaration = 6
    RULE_idList = 7
    RULE_atomicType = 8
    RULE_arrayType = 9
    RULE_voidType = 10
    RULE_autoType = 11
    RULE_dimensions = 12
    RULE_type_specifier = 13
    RULE_arrayCell = 14
    RULE_funcDeclaration = 15
    RULE_functionPrototype = 16
    RULE_returnType = 17
    RULE_parameters = 18
    RULE_parameterList = 19
    RULE_parameter = 20
    RULE_blockStatement = 21
    RULE_functionBody = 22
    RULE_statements = 23
    RULE_statementList = 24
    RULE_statement = 25
    RULE_assignmentStatement = 26
    RULE_leftHandSide = 27
    RULE_ifStatement = 28
    RULE_forStatement = 29
    RULE_whileStatement = 30
    RULE_doWhileStatement = 31
    RULE_breakStatement = 32
    RULE_continueStatement = 33
    RULE_returnStatement = 34
    RULE_callStatement = 35
    RULE_call = 36
    RULE_expressions = 37
    RULE_expressionList = 38
    RULE_expression = 39
    RULE_expression1 = 40
    RULE_expression2 = 41
    RULE_expression3 = 42
    RULE_expression4 = 43
    RULE_expression5 = 44
    RULE_expression6 = 45
    RULE_expression7 = 46
    RULE_expression8 = 47
    RULE_indexedArray = 48
    RULE_subexpression = 49
    RULE_callExpression = 50
    RULE_specialFunctionCall = 51
    RULE_readIntegerCall = 52
    RULE_printIntegerCall = 53
    RULE_readFloatCall = 54
    RULE_writeFloatCall = 55
    RULE_readBooleanCall = 56
    RULE_printBooleanCall = 57
    RULE_readStringCall = 58
    RULE_printStringCall = 59
    RULE_superCall = 60
    RULE_preventDefaultCall = 61

    ruleNames =  [ "program", "declarationList", "declaration", "varDeclaration", 
                   "noAssignVarDeclaration", "assignVarDeclaration", "recursiveAssignVarDeclaration", 
                   "idList", "atomicType", "arrayType", "voidType", "autoType", 
                   "dimensions", "type_specifier", "arrayCell", "funcDeclaration", 
                   "functionPrototype", "returnType", "parameters", "parameterList", 
                   "parameter", "blockStatement", "functionBody", "statements", 
                   "statementList", "statement", "assignmentStatement", 
                   "leftHandSide", "ifStatement", "forStatement", "whileStatement", 
                   "doWhileStatement", "breakStatement", "continueStatement", 
                   "returnStatement", "callStatement", "call", "expressions", 
                   "expressionList", "expression", "expression1", "expression2", 
                   "expression3", "expression4", "expression5", "expression6", 
                   "expression7", "expression8", "indexedArray", "subexpression", 
                   "callExpression", "specialFunctionCall", "readIntegerCall", 
                   "printIntegerCall", "readFloatCall", "writeFloatCall", 
                   "readBooleanCall", "printBooleanCall", "readStringCall", 
                   "printStringCall", "superCall", "preventDefaultCall" ]

    EOF = Token.EOF
    ARRAYLIT=1
    AUTO=2
    BREAK=3
    BOOLEAN=4
    DO=5
    ELSE=6
    FLOAT=7
    FOR=8
    FUNCTION=9
    IF=10
    INTEGER=11
    RETURN=12
    STRING=13
    WHILE=14
    VOID=15
    OUT=16
    CONTINUE=17
    OF=18
    INHERIT=19
    ARRAY=20
    LPAREN=21
    RPAREN=22
    LBRACE=23
    RBRACE=24
    LBRACKET=25
    RBRACKET=26
    SEMI=27
    COMMA=28
    COLON=29
    ASSIGN=30
    ADD=31
    SUB=32
    MUL=33
    DIV=34
    MOD=35
    CLAIM=36
    AND=37
    OR=38
    EQ=39
    NEQ=40
    LT=41
    LTE=42
    GT=43
    GTE=44
    CONCAT=45
    READINTEGER=46
    PRINTINTEGER=47
    READFLOAT=48
    WRITEFLOAT=49
    READBOOLEAN=50
    PRINTBOOLEAN=51
    READSTRING=52
    PRINTSTRING=53
    SUPER=54
    PREVENTDEFAULT=55
    CSTYLE=56
    LINECOMMENT=57
    BOOLEANLIT=58
    IDENTIFIER=59
    INTLIT=60
    FLOATLIT=61
    STRINGLIT=62
    UNCLOSE_STRING=63
    ILLEGAL_ESCAPE=64
    WS=65
    ERROR_CHAR=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarationList(self):
            return self.getTypedRuleContext(MT22Parser.DeclarationListContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.declarationList()
            self.state = 125
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(MT22Parser.DeclarationContext,0)


        def declarationList(self):
            return self.getTypedRuleContext(MT22Parser.DeclarationListContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declarationList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarationList" ):
                return visitor.visitDeclarationList(self)
            else:
                return visitor.visitChildren(self)




    def declarationList(self):

        localctx = MT22Parser.DeclarationListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declarationList)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.declaration()
                self.state = 128
                self.declarationList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDeclaration(self):
            return self.getTypedRuleContext(MT22Parser.VarDeclarationContext,0)


        def funcDeclaration(self):
            return self.getTypedRuleContext(MT22Parser.FuncDeclarationContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = MT22Parser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        try:
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.varDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.funcDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def noAssignVarDeclaration(self):
            return self.getTypedRuleContext(MT22Parser.NoAssignVarDeclarationContext,0)


        def assignVarDeclaration(self):
            return self.getTypedRuleContext(MT22Parser.AssignVarDeclarationContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_varDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclaration" ):
                return visitor.visitVarDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def varDeclaration(self):

        localctx = MT22Parser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDeclaration)
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.noAssignVarDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.assignVarDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NoAssignVarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idList(self):
            return self.getTypedRuleContext(MT22Parser.IdListContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def type_specifier(self):
            return self.getTypedRuleContext(MT22Parser.Type_specifierContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_noAssignVarDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNoAssignVarDeclaration" ):
                return visitor.visitNoAssignVarDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def noAssignVarDeclaration(self):

        localctx = MT22Parser.NoAssignVarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_noAssignVarDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.idList()
            self.state = 142
            self.match(MT22Parser.COLON)
            self.state = 143
            self.type_specifier()
            self.state = 144
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignVarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def expression(self):
            return self.getTypedRuleContext(MT22Parser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def recursiveAssignVarDeclaration(self):
            return self.getTypedRuleContext(MT22Parser.RecursiveAssignVarDeclarationContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def type_specifier(self):
            return self.getTypedRuleContext(MT22Parser.Type_specifierContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_assignVarDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignVarDeclaration" ):
                return visitor.visitAssignVarDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def assignVarDeclaration(self):

        localctx = MT22Parser.AssignVarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignVarDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(MT22Parser.IDENTIFIER)
            self.state = 153
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COMMA]:
                self.state = 147
                self.match(MT22Parser.COMMA)
                self.state = 148
                self.recursiveAssignVarDeclaration()
                pass
            elif token in [MT22Parser.COLON]:
                self.state = 149
                self.match(MT22Parser.COLON)
                self.state = 150
                self.type_specifier()
                self.state = 151
                self.match(MT22Parser.ASSIGN)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 155
            self.expression()
            self.state = 156
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RecursiveAssignVarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def expression(self):
            return self.getTypedRuleContext(MT22Parser.ExpressionContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def recursiveAssignVarDeclaration(self):
            return self.getTypedRuleContext(MT22Parser.RecursiveAssignVarDeclarationContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def type_specifier(self):
            return self.getTypedRuleContext(MT22Parser.Type_specifierContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_recursiveAssignVarDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRecursiveAssignVarDeclaration" ):
                return visitor.visitRecursiveAssignVarDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def recursiveAssignVarDeclaration(self):

        localctx = MT22Parser.RecursiveAssignVarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_recursiveAssignVarDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(MT22Parser.IDENTIFIER)
            self.state = 165
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COMMA]:
                self.state = 159
                self.match(MT22Parser.COMMA)
                self.state = 160
                self.recursiveAssignVarDeclaration()
                pass
            elif token in [MT22Parser.COLON]:
                self.state = 161
                self.match(MT22Parser.COLON)
                self.state = 162
                self.type_specifier()
                self.state = 163
                self.match(MT22Parser.ASSIGN)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 167
            self.expression()
            self.state = 168
            self.match(MT22Parser.COMMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def idList(self):
            return self.getTypedRuleContext(MT22Parser.IdListContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdList" ):
                return visitor.visitIdList(self)
            else:
                return visitor.visitChildren(self)




    def idList(self):

        localctx = MT22Parser.IdListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_idList)
        try:
            self.state = 174
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 170
                self.match(MT22Parser.IDENTIFIER)
                self.state = 171
                self.match(MT22Parser.COMMA)
                self.state = 172
                self.idList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 173
                self.match(MT22Parser.IDENTIFIER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomicTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_atomicType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomicType" ):
                return visitor.visitAtomicType(self)
            else:
                return visitor.visitChildren(self)




    def atomicType(self):

        localctx = MT22Parser.AtomicTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_atomicType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.INTEGER) | (1 << MT22Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def LBRACKET(self):
            return self.getToken(MT22Parser.LBRACKET, 0)

        def dimensions(self):
            return self.getTypedRuleContext(MT22Parser.DimensionsContext,0)


        def RBRACKET(self):
            return self.getToken(MT22Parser.RBRACKET, 0)

        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def atomicType(self):
            return self.getTypedRuleContext(MT22Parser.AtomicTypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arrayType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayType" ):
                return visitor.visitArrayType(self)
            else:
                return visitor.visitChildren(self)




    def arrayType(self):

        localctx = MT22Parser.ArrayTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_arrayType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.match(MT22Parser.ARRAY)
            self.state = 179
            self.match(MT22Parser.LBRACKET)
            self.state = 180
            self.dimensions()
            self.state = 181
            self.match(MT22Parser.RBRACKET)
            self.state = 182
            self.match(MT22Parser.OF)
            self.state = 183
            self.atomicType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VoidTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_voidType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVoidType" ):
                return visitor.visitVoidType(self)
            else:
                return visitor.visitChildren(self)




    def voidType(self):

        localctx = MT22Parser.VoidTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_voidType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self.match(MT22Parser.VOID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AutoTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_autoType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAutoType" ):
                return visitor.visitAutoType(self)
            else:
                return visitor.visitChildren(self)




    def autoType(self):

        localctx = MT22Parser.AutoTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_autoType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 187
            self.match(MT22Parser.AUTO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(MT22Parser.INTLIT, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def dimensions(self):
            return self.getTypedRuleContext(MT22Parser.DimensionsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_dimensions
